# utocli

./: .gitignore  Cargo.toml  README.md  justfile  nextest.toml
.github/: pre-commit-config.yaml  renovate.json5
.github/workflows/: ci.yml  commit-check.yml
crates/utocli/: Cargo.toml
crates/utocli-clap/: Cargo.toml
crates/utocli-clap/src/: arg.rs  args.rs  diagnostics.rs  lib.rs  mapping.rs  parser.rs  subcommand.rs
crates/utocli-core/: Cargo.toml
crates/utocli-core/src/: builder_macros.rs  compose_schema.rs  lib.rs  opencli.rs  to_response.rs  to_schema.rs
crates/utocli-core/src/opencli/: command.rs  components.rs  environment.rs  extensions.rs  external_docs.rs  info.rs  map.rs  parameter.rs  platform.rs  response.rs  schema.rs  tag.rs
crates/utocli-derive/: Cargo.toml  README.md
crates/utocli-derive/src/: command.rs  diagnostics.rs  doc_comment.rs  lib.rs  opencli.rs  parameter.rs  response.rs  schema.rs  type_tree.rs
crates/utocli-derive/src/schema/: enums.rs  serde.rs
crates/utocli/src/: lib.rs
testlib/: Cargo.toml
tests/: Cargo.toml  build.rs
tests/tests/: it_build_kitchen_sink.rs  it_builder_kitchen_sink.rs  it_derive_any_value.rs  it_derive_clap_kitchen_sink.rs  it_derive_generics.rs  it_derive_into_responses.rs  it_derive_kitchen_sink.rs  it_derive_parameter_any_value.rs  it_derive_recursion_detection.rs  it_derive_response_any_value.rs  it_derive_schema.rs  it_derive_schema_attributes.rs  it_derive_schema_base.rs  it_derive_schema_enum.rs  it_derive_schema_struct.rs  it_derive_serde.rs  it_derive_validation.rs  test_clap_detection.rs
tests/tests/snapshots/: it_build_kitchen_sink__build_opencli_with_complete_spec_succeeds.snap  it_build_kitchen_sink__serialize_opencli_to_yaml_succeeds.snap  it_builder_kitchen_sink__build_opencli_with_complete_spec_succeeds.snap  it_builder_kitchen_sink__generate_opencli_spec_using_builder_succeeds.snap  it_builder_kitchen_sink__serialize_opencli_spec_using_builder_to_yaml_succeeds.snap  it_builder_kitchen_sink__serialize_opencli_to_yaml_succeeds.snap  it_derive_clap_kitchen_sink__generate_opencli_spec_from_clap_parser_succeeds.snap  it_derive_clap_kitchen_sink__generate_opencli_spec_from_clap_parser_succeeds.snap.new  it_derive_clap_kitchen_sink__serialize_opencli_spec_from_clap_parser_to_yaml_succeeds.snap  it_derive_clap_kitchen_sink__serialize_opencli_spec_from_clap_parser_to_yaml_succeeds.snap.new  it_derive_clap_kitchen_sink__tests__clap_kitchen_sink_spec.snap  it_derive_kitchen_sink__generate_opencli_spec_using_derive_succeeds.snap  it_derive_kitchen_sink__serialize_opencli_spec_using_derive_to_yaml_succeeds.snap
