[workspace]
resolver = "3"
members = [ 
  "crates/utocli",
  "crates/utocli-core",
  "testlib",
  "tests",
]

[workspace.package]
authors = ["Lorenzo Delgado <lnsdev@proton.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/LNSD/utocli"
version = "0.0.0"

[workspace.lints.rust]
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"
rust-2024-compatibility = "deny"
unknown-or-malformed-diagnostic-attributes = "deny"
unused = "deny"

ambiguous_glob_reexports = "deny"
ambiguous_wide_pointer_comparisons = "deny"
asm_sub_register = "deny"
async_fn_in_trait = "deny"
bad_asm_style = "deny"
break_with_label_and_loop = "deny"
clashing_extern_declarations = "deny"
confusable_idents = "deny"
const_item_mutation = "deny"
dangling_pointers_from_temporaries = "deny"
deprecated = "warn"
deprecated_where_clause_location = "deny"
deref_nullptr = "deny"
double_negations = "deny"
drop_bounds = "deny"
dropping_copy_types = "deny"
dropping_references = "deny"
duplicate_macro_attributes = "deny"
dyn_drop = "deny"
exported_private_dependencies = "deny"
for_loops_over_fallibles = "deny"
forgetting_copy_types = "deny"
forgetting_references = "deny"
function_item_references = "deny"
hidden_glob_reexports = "deny"
improper_ctypes = "deny"
improper_ctypes_definitions = "deny"
incomplete_features = "deny"
inline_no_sanitize = "deny"
internal_features = "deny"
invalid_from_utf8 = "deny"
invalid_macro_export_arguments = "deny"
invalid_nan_comparisons = "deny"
invalid_value = "deny"
irrefutable_let_patterns = "deny"
large_assignments = "deny"
mismatched_lifetime_syntaxes = "deny"
missing_abi = "deny"
mixed_script_confusables = "deny"
named_arguments_used_positionally = "deny"
no_mangle_generic_items = "deny"
non_contiguous_range_endpoints = "deny"
non_local_definitions = "deny"
non_shorthand_field_patterns = "deny"
noop_method_call = "deny"
opaque_hidden_inferred_bound = "deny"
overlapping_range_endpoints = "deny"
private_bounds = "deny"
private_interfaces = "deny"
ptr_to_integer_transmute_in_consts = "deny"
refining_impl_trait_internal = "deny"
refining_impl_trait_reachable = "deny"
renamed_and_removed_lints = "deny"
special_module_name = "deny"
stable_features = "deny"
suspicious_double_ref_op = "deny"
trivial_bounds = "deny"
type_alias_bounds = "deny"
uncommon_codepoints = "deny"
unconditional_recursion = "deny"
unexpected_cfgs = "deny"
unfulfilled_lint_expectations = "deny"
ungated_async_fn_track_caller = "deny"
unknown_lints = "deny"
unnameable_test_items = "deny"
unnecessary_transmutes = "deny"
unpredictable_function_pointer_comparisons = "deny"
useless_ptr_null_checks = "deny"
uses_power_alignment = "deny"
while_true = "deny"
