[workspace]
resolver = "3"
members = [ 
  "crates/utocli",
  "crates/utocli-core",
  "testlib",
  "tests",
]

[workspace.package]
authors = ["Lorenzo Delgado <lnsdev@proton.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/LNSD/utocli"
version = "0.0.0"

[workspace.lints.rust]
deprecated = "warn"
future-incompatible = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = "deny"
