[package]
name = "tests"
edition.workspace = true
publish = false

[dependencies]
utocli = { path = "../crates/utocli", features = ["preserve_order"] }

[dev-dependencies]
insta = { version = "1.39", features = ["json", "yaml"] }
jsonschema = "0.33.0"
serde_json = "1.0"
serde_norway = "0.9"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[lints]
workspace = true
