[package]
name = "tests"
edition.workspace = true
publish = false

[dependencies]
utocli = { path = "../crates/utocli", features = ["macros", "clap", "preserve_order"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
insta = { version = "1.39", features = ["json", "yaml"] }
jsonschema = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[lints]
workspace = true
