[package]
name = "utocli-clap"
authors.workspace = true
description = "Clap integration for utocli - generate OpenCLI specs from clap Parser types"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
utocli-core = { path = "../utocli-core", version = "0.0.0" }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
