[package]
name = "utocli-core"
authors.workspace = true
description = "Core types and traits for utocli"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
