[package]
name = "utocli-derive"
authors.workspace = true
description = "Derive macros for utocli"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lints]
workspace = true
